@@ -1,3 +1,9 @@
+2016-03-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/70421
+	* gcc.dg/torture/pr70421.c: New test.
+	* gcc.target/i386/avx512f-pr70421.c: New test.
+
 2016-03-30  Patrick Palka  <ppalka@gcc.gnu.org>
 
 	PR tree-optimization/59124
